examples/diagnostics/expected/1205-diagnostics-annotated-init-type-mismatch.stderr
error: cannot initialize 'x' of type 'i32' with a value of type 'string'
  --> examples/diagnostics/1205-diagnostics-annotated-init-type-mismatch.sx:19:15
   |
19 |     x : i32 = "hi";        // error: cannot initialize 'x' (string ↛ i32)
   |               ^^^^

error: cannot reassign 'y' of type 'i32' with a value of type 'string'
  --> examples/diagnostics/1205-diagnostics-annotated-init-type-mismatch.sx:22:9
   |
22 |     y = "nope";            // error: cannot reassign 'y' (string ↛ i32)
   |         ^^^^^^

error: cannot initialize 'C' of type 'i32' with a value of type 'string'
  --> examples/diagnostics/1205-diagnostics-annotated-init-type-mismatch.sx:24:15
   |
24 |     C : i32 : "also";      // error: cannot initialize 'C' (string ↛ i32)
   |               ^^^^^^
